--- a/directing-master/index.html
+++ b/directing-master/index.html
@@ -45,7 +45,7 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.html">hello</a></li>
+                                <li class="active"><a href="./index.html">HaNa</a></li>
                                 <li><a href="./listing.html">Listing</a></li>
                                 <li><a href="#">Categories</a></li>
                                 <li><a href="#">Pages</a>
