상세페이지 사러가기 버튼

--- a/directing-master/listing-details.html
+++ b/directing-master/listing-details.html
@@ -99,8 +99,8 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="listing__hero__btns">
-                        <a href="#" class="primary-btn share-btn"><i class="fa fa-mail-reply"></i> Share</a>
-                        <a href="#" class="primary-btn"><i class="fa fa-bookmark"></i> Bookmark</a>
+                        <!-- <a href="#" class="primary-btn share-btn"><i class="fa fa-mail-reply"></i> Share</a> -->
+                        <a href="#" class="primary-btn">사러가기(buy)</a>
                     </div>
                 </div>
             </div>
