--- a/directing-master/listing-details.html
+++ b/directing-master/listing-details.html
@@ -82,7 +82,7 @@
                             <img src="img/listing/details/ld-icon.png" alt="">
                         </div>
                         <div class="listing__hero__text">
-                            <h2>유가네 닭갈비 부천시청점(<span style="color:red">+3,792원</span>)</h2>
+                            <h2>유가네 닭갈비 부천점<br/>(3,792원) <span style="color:red">+12.32%</span></h2>
                             <div class="listing__hero__widget">
                                 <div class="listing__hero__widget__rating">
                                     <span class="icon_star"></span>
@@ -109,94 +109,94 @@
     <!-- Listing Section End -->
 
     <!-- Listing Details Section Begin -->
-    <section class="listing-details spad">
+    <section class="listing-details spad" style="padding-top: 25px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="listing__details__text">
                         <div class="listing__details__about">
                             <h4>개요</h4>
-                            <p>안녕하세요^^ 샤로수길맛집 킷사서울입니다. <br/> '킷사서울 '은 교토의 오반자이에서 영감을 받아 다양한 일본 한상 차림을 준비하였습니다.</p>
+                            <p>안녕하세요^^ 유가네 닭갈비입니다. <br/> '유가네 닭갈비'는 교토의 오반자이에서 영감을 받아 다양한 일본 한상 차림을 준비하였습니다.</p>
                             <br/>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                     <p>주소</p>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>서울특별시 용산구 대사관로5길 28</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                     <p>전화번호</p>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>02-794-0282</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                     <p>음식 종류</p>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>기타 양식</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                     <p>가격대</p>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>만원-2만원</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                     <p>휴일</p>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>일, 월</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                     <p>메뉴</p>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>단호박 수프 (S): 4,000원</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>퀴노아 그레인 보울: 13,000원</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>아보카도 샐러드: 12,500원</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>애플 루꼴라 샌드위치: 10,000원</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-3 col-6">
+                                <div class="col-lg-3 col-md-3 col-4">
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-9">
+                                <div class="col-lg-6 col-md-6 col-8">
                                     <p>베이컨 칠리카도 샌드위치: 11,500원</p>
                                 </div>
                             </div>
                         </div>
                         <div class="listing__details__amenities">
-                            <h4>평가모형</h4>
+                            <h4>맛집상세정보</h4>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-12" style="margin-bottom: 10px;">
                                     <h6>일일방문자수 : <strong>50명</strong></h6>
@@ -208,7 +208,7 @@
                                     <h6>업종 : <strong>한식</strong></h6>
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-12" style="margin-bottom: 10px;">
-                                    <h6>주방장 경력 : <strong>10년</strong></h6>
+                                    <h6>주방장 경력 : <strong>10년, 한식조리사 자격증</strong></h6>
                                 </div>
                             </div>
                             <canvas id="myChart" width="400" height="150"></canvas>
@@ -286,62 +286,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="listing__details__rating">
-                            <h4>평점</h4>
-                            <div class="listing__details__rating__overall">
-                                <h2>4.7</h2>
-                                <div class="listing__details__rating__star">
-                                    <span class="icon_star"></span>
-                                    <span class="icon_star"></span>
-                                    <span class="icon_star"></span>
-                                    <span class="icon_star"></span>
-                                    <span class="icon_star"></span>
-                                </div>
-                                <span>(120 Rating)</span>
-                            </div>
-                            <div class="listing__details__rating__bar">
-                                <div class="listing__details__rating__bar__item">
-                                    <span>4.4</span>
-                                    <div id="bar1" class="barfiller">
-                                        <span class="fill" data-percentage="100"></span>
-                                    </div>
-                                    <span class="right">양</span>
-                                </div>
-                                <div class="listing__details__rating__bar__item">
-                                    <span>3.9</span>
-                                    <div id="bar2" class="barfiller">
-                                        <span class="fill" data-percentage="75"></span>
-                                    </div>
-                                    <span class="right">가격</span>
-                                </div>
-                                <div class="listing__details__rating__bar__item">
-                                    <span>4.2</span>
-                                    <div id="bar3" class="barfiller">
-                                        <span class="fill" data-percentage="80"></span>
-                                    </div>
-                                    <span class="right">공간</span>
-                                </div>
-                                <div class="listing__details__rating__bar__item">
-                                    <span>4.8</span>
-                                    <div id="bar4" class="barfiller">
-                                        <span class="fill" data-percentage="80"></span>
-                                    </div>
-                                    <span class="right">서비스</span>
-                                </div>
-                                <div class="listing__details__rating__bar__item">
-                                    <span>4.0</span>
-                                    <div id="bar5" class="barfiller">
-                                        <span class="fill" data-percentage="85"></span>
-                                    </div>
-                                    <span class="right">위치</span>
-                                </div>
-                            </div>
-                        </div>
                         <div class="listing__details__comment">
                             <h4>댓글</h4>
                             <div class="listing__details__comment__item">
                                 <div class="listing__details__comment__item__pic">
-                                    <img src="img/listing/details/comment.png" alt="">
+                                    <!-- <img src="img/listing/details/comment.png" alt=""> -->
                                 </div>
                                 <div class="listing__details__comment__item__text">
                                     <div class="listing__details__comment__item__rating">
@@ -367,7 +316,7 @@
                             </div>
                             <div class="listing__details__comment__item">
                                 <div class="listing__details__comment__item__pic">
-                                    <img src="img/listing/details/comment.png" alt="">
+                                    <!-- <img src="img/listing/details/comment.png" alt=""> -->
                                 </div>
                                 <div class="listing__details__comment__item__text">
                                     <div class="listing__details__comment__item__rating">
@@ -392,7 +341,7 @@
                             </div>
                             <div class="listing__details__comment__item">
                                 <div class="listing__details__comment__item__pic">
-                                    <img src="img/listing/details/comment.png" alt="">
+                                    <!-- <img src="img/listing/details/comment.png" alt=""> -->
                                 </div>
                                 <div class="listing__details__comment__item__text">
                                     <div class="listing__details__comment__item__rating">
@@ -432,7 +381,7 @@
                         <div class="listing__sidebar__contact">
                             <div class="listing__sidebar__contact__map">
                                 <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.217633267384!2d126.95157611542625!3d37.47919033688309!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9f398a19aaab%3A0xcc5153b6cb0b9c7d!2z7YK37IKs7ISc7Jq4!5e0!3m2!1sko!2skr!4v1635318596194!5m2!1sko!2skr"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101318.79081033394!2d126.89247985532306!3d37.47931826390531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b7d2d00000001%3A0xf1f1ce19e8dfb4fa!2z7Jyg6rCA64Sk64ut6rCI67mEIOu2gOyynOyXreygkA!5e0!3m2!1sko!2skr!4v1635417930741!5m2!1sko!2skr"
                                     height="200" style="border:0;" allowfullscreen="" aria-hidden="false"
                                     tabindex="0"></iframe>
                                 <img src="img/listing/details/map-icon.png" alt="">
@@ -440,7 +389,7 @@
                             <div class="listing__sidebar__contact__text">
                                 <h4>Contacts</h4>
                                 <ul>
-                                    <li><span class="icon_pin_alt"></span> 서울 관악구 남부순환로226길 31 2층 킷사서울</li>
+                                    <li><span class="icon_pin_alt"></span> 인천시 관악구 남부순환로226길 31 2층 유가네 닭갈비</li>
                                     <li><span class="icon_phone"></span> (+82) 02-878-7444</li>
                                     <li><span class="icon_mail_alt"></span> 생방송투데이 2709회, 20.12.01.</li>
                                     <li><span class="icon_globe-2"></span> http://www.instagram.com/kissa.seoul</li>
@@ -580,21 +529,21 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         const labels = [
-            '1월',
-            '2월',
-            '3월',
             '4월',
             '5월',
             '6월',
             '7월',
+            '8월',
+            '9월',
+            '10월',
         ];
         const data = {
         labels: labels,
         datasets: [{
-            label: '유가네 닭갈비 부천시청점',
+            label: '유가네 닭갈비 부천시청점 주가',
             backgroundColor: 'rgb(255, 99, 132)',
             borderColor: 'rgb(255, 99, 132)',
-            data: [0, 23, 5, 2, 7, 45, 17],
+            data: [0, 2100, 1640, 3210, 4203, 2000, 3792],
         }]
         };
         const config = {
