--- a/directing-master/listing-details.html
+++ b/directing-master/listing-details.html
@@ -93,7 +93,7 @@
                                 </div>
                                 <div>120 리뷰</div>
                             </div>
-                            <p><span class="icon_pin_alt"></span> 서울 관악구 남부순환로226길 31 2층 킷사서울</p>
+                            <p><span class="icon_pin_alt"></span>인천시 관악구 남부순환로226길 31 2층 유가네 닭갈비</p>
                         </div>
                     </div>
                 </div>
