--- a/directing-master/listing-details.html
+++ b/directing-master/listing-details.html
@@ -84,23 +84,23 @@
                         <div class="listing__hero__text">
                             <h2>유가네 닭갈비 부천점<br/>(3,792원) <span style="color:red">+12.32%</span></h2>
                             <div class="listing__hero__widget">
-                                <div class="listing__hero__widget__rating">
+                                <!-- <div class="listing__hero__widget__rating">
                                     <span class="icon_star"></span>
                                     <span class="icon_star"></span>
                                     <span class="icon_star"></span>
                                     <span class="icon_star"></span>
                                     <span class="icon_star-half_alt"></span>
-                                </div>
+                                </div> -->
                                 <div>120 리뷰</div>
                             </div>
-                            <p><span class="icon_pin_alt"></span>인천시 관악구 남부순환로226길 31 2층 유가네 닭갈비</p>
+                            <p><span class="icon_pin_alt"></span>경기도 부천시 중1동 석천로177번길 36</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="listing__hero__btns">
+                    <div class="listing__hero__btns" >
                         <!-- <a href="#" class="primary-btn share-btn"><i class="fa fa-mail-reply"></i> Share</a> -->
-                        <a href="#" class="primary-btn">사러가기(buy)</a>
+                        <a href="#" class="primary-btn" style="background-color:#27b2a5">사러가기(buy)</a>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                                     <p>주소</p>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-8">
-                                    <p>서울특별시 용산구 대사관로5길 28</p>
+                                    <p>경기도 부천시 중1동 석천로177번길 36</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -293,14 +293,14 @@
                                     <!-- <img src="img/listing/details/comment.png" alt=""> -->
                                 </div>
                                 <div class="listing__details__comment__item__text">
-                                    <div class="listing__details__comment__item__rating">
+                                    <!-- <div class="listing__details__comment__item__rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
-                                    </div>
-                                    <span>10. 17, 2021</span>
+                                    </div> -->
+                                    <span style="color:#27b2a5">10. 17, 2021</span>
                                     <h5>예린</h5>
                                     <p>오늘 처음 방문했는데
                                         직원분들도 친절하고 무엇보다 음식이 너무 맛있어요-!!!😍😍😍
@@ -319,14 +319,14 @@
                                     <!-- <img src="img/listing/details/comment.png" alt=""> -->
                                 </div>
                                 <div class="listing__details__comment__item__text">
-                                    <div class="listing__details__comment__item__rating">
+                                    <!-- <div class="listing__details__comment__item__rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
-                                    </div>
-                                    <span>10. 19, 2021</span>
+                                    </div> -->
+                                    <span style="color:#27b2a5">10. 19, 2021</span>
                                     <h5>승원</h5>
                                     <p>친구 소개로 먹어봤는데..
                                         와 왜 이렇게 극찬했는지 알 것 같네요
@@ -344,14 +344,14 @@
                                     <!-- <img src="img/listing/details/comment.png" alt=""> -->
                                 </div>
                                 <div class="listing__details__comment__item__text">
-                                    <div class="listing__details__comment__item__rating">
+                                    <!-- <div class="listing__details__comment__item__rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
-                                    </div>
-                                    <span>10 22, 2021</span>
+                                    </div> -->
+                                    <span style="color:#27b2a5">10 22, 2021</span>
                                     <h5>경민</h5>
                                     <p>부타동과 가츠샌드 주문했습니다
                                         부타동은 달달한 간장양념에 절여진 돼지고기였어요 고기양이 푸짐했습니다. 맛있었어요
@@ -389,7 +389,7 @@
                             <div class="listing__sidebar__contact__text">
                                 <h4>Contacts</h4>
                                 <ul>
-                                    <li><span class="icon_pin_alt"></span> 인천시 관악구 남부순환로226길 31 2층 유가네 닭갈비</li>
+                                    <li><span class="icon_pin_alt"></span>경기도 부천시 중1동 석천로177번길 36</li>
                                     <li><span class="icon_phone"></span> (+82) 02-878-7444</li>
                                     <li><span class="icon_mail_alt"></span> 생방송투데이 2709회, 20.12.01.</li>
                                     <li><span class="icon_globe-2"></span> http://www.instagram.com/kissa.seoul</li>
@@ -541,8 +541,8 @@
         labels: labels,
         datasets: [{
             label: '유가네 닭갈비 부천시청점 주가',
-            backgroundColor: 'rgb(255, 99, 132)',
-            borderColor: 'rgb(255, 99, 132)',
+            backgroundColor: '#27b2a5',
+            borderColor: '#27b2a5',
             data: [0, 2100, 1640, 3210, 4203, 2000, 3792],
         }]
         };
